[gd_scene load_steps=5 format=2]

[ext_resource path="res://themes/theme_test.tres" type="Theme" id=1]
[ext_resource path="res://dlcs/multi/lobby.gd" type="Script" id=2]
[ext_resource path="res://scenes/ChatControl.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/log_in.gd" type="Script" id=4]

[node name="lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 2
size_flags_vertical = 2
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ -426.126 ]
}

[node name="players" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="label" type="Label" parent="players"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -58.0
margin_top = -173.5
margin_right = 58.0
margin_bottom = -134.5
size_flags_horizontal = 2
size_flags_vertical = 0
text = "KEY_AP"

[node name="start" type="Button" parent="players"]
margin_left = 442.0
margin_top = 457.5
margin_right = 578.0
margin_bottom = 496.5
size_flags_horizontal = 2
size_flags_vertical = 2
text = "START!"

[node name="list" type="ItemList" parent="players"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -102.0
margin_top = -129.5
margin_right = 102.0
margin_bottom = 129.5
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="back3" type="Button" parent="players"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -68.0
margin_top = 211.0
margin_right = 68.0
margin_bottom = 251.0
text = "Back"

[node name="ChatControl2" parent="players" instance=ExtResource( 3 )]
visible = false

[node name="connect" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="Button" type="Button" parent="connect"]
visible = false
margin_right = 75.0
margin_bottom = 39.0
text = "Login"

[node name="name_label" type="Label" parent="connect"]
margin_left = 329.0
margin_top = 92.0
margin_right = 477.0
margin_bottom = 131.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "KEY_NAME"

[node name="name" type="LineEdit" parent="connect"]
margin_left = 329.5
margin_top = 136.5
margin_right = 485.5
margin_bottom = 175.5
size_flags_horizontal = 2
size_flags_vertical = 2
text = "The Warrior"

[node name="ip_label" type="Label" parent="connect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -186.0
margin_top = -122.5
margin_right = 14.0
margin_bottom = -83.5
size_flags_horizontal = 2
size_flags_vertical = 0
text = "KEY_IP_Adress"

[node name="ip" type="LineEdit" parent="connect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -183.0
margin_top = -86.0
margin_right = -27.0
margin_bottom = -47.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "127.0.0.1"

[node name="host" type="Button" parent="connect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 36.0
margin_top = -165.0
margin_right = 163.0
margin_bottom = -124.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "KEY_Host"

[node name="join" type="Button" parent="connect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 35.5
margin_top = -87.5
margin_right = 162.5
margin_bottom = -48.5
size_flags_horizontal = 2
size_flags_vertical = 2
text = "KEY_Join"

[node name="error_label" type="Label" parent="connect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -121.0
margin_top = 100.0
margin_right = 121.0
margin_bottom = 139.0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_colors/font_color = Color( 0.820312, 0.291595, 0.291595, 1 )
align = 1

[node name="back" type="Button" parent="connect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -67.9999
margin_top = 29.5
margin_right = 67.9999
margin_bottom = 68.5
text = "KEY_Quit"

[node name="ChatControl" parent="connect" instance=ExtResource( 3 )]
visible = false
margin_left = -2.0

[node name="error" type="AcceptDialog" parent="."]
margin_right = 55.0
margin_bottom = 58.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="Panel" type="Panel" parent="Control"]
modulate = Color( 0, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Control2" type="Control" parent="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Control2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -258.0
margin_top = -105.5
margin_right = 258.0
margin_bottom = 105.5

[node name="email" type="LineEdit" parent="Control/Control2/VBoxContainer"]
margin_right = 516.0
margin_bottom = 39.0
max_length = 1000
expand_to_text_length = true
placeholder_text = "E-Mail"

[node name="name" type="LineEdit" parent="Control/Control2/VBoxContainer"]
visible = false
margin_top = 43.0
margin_right = 282.0
margin_bottom = 82.0
max_length = 1000
expand_to_text_length = true
placeholder_text = "UserName"

[node name="password" type="LineEdit" parent="Control/Control2/VBoxContainer"]
margin_top = 43.0
margin_right = 516.0
margin_bottom = 82.0
max_length = 100
secret = true
expand_to_text_length = true
placeholder_text = "Password"

[node name="password2" type="LineEdit" parent="Control/Control2/VBoxContainer"]
margin_top = 86.0
margin_right = 516.0
margin_bottom = 125.0
max_length = 100
secret = true
expand_to_text_length = true
placeholder_text = "Confirm Password"

[node name="signup" type="Button" parent="Control/Control2/VBoxContainer"]
margin_top = 129.0
margin_right = 516.0
margin_bottom = 168.0
text = "KEY_SIGNUP"

[node name="Label" type="Label" parent="Control/Control2/VBoxContainer"]
margin_top = 172.0
margin_right = 516.0
margin_bottom = 211.0
text = "KEY_REG_P_A"
align = 1
valign = 1

[node name="Label2" type="Label" parent="Control/Control2/VBoxContainer"]
visible = false
margin_top = 215.0
margin_right = 424.0
margin_bottom = 254.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "KEY_PASS_ERR"
align = 1
valign = 1

[node name="Control" type="Control" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )

[node name="HBoxContainer" type="VBoxContainer" parent="Control/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -221.0
margin_top = -148.0
margin_right = 222.0
margin_bottom = 149.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="username" type="LineEdit" parent="Control/Control/HBoxContainer"]
visible = false
margin_right = 443.0
margin_bottom = 39.0
max_length = 100
placeholder_text = "Username"

[node name="email" type="LineEdit" parent="Control/Control/HBoxContainer"]
margin_right = 443.0
margin_bottom = 39.0
max_length = 100
placeholder_text = "E-Mail"

[node name="password" type="LineEdit" parent="Control/Control/HBoxContainer"]
margin_top = 43.0
margin_right = 443.0
margin_bottom = 82.0
max_length = 100
secret = true
placeholder_text = "Password"

[node name="Button2" type="Button" parent="Control/Control/HBoxContainer"]
margin_top = 86.0
margin_right = 443.0
margin_bottom = 125.0
text = "KEY_SIGNIN"

[node name="HSeparator" type="HSeparator" parent="Control/Control/HBoxContainer"]
margin_top = 129.0
margin_right = 443.0
margin_bottom = 133.0

[node name="Button4" type="Button" parent="Control/Control/HBoxContainer"]
margin_top = 137.0
margin_right = 443.0
margin_bottom = 176.0
text = "KEY_RESTORE_P"

[node name="Button3" type="Button" parent="Control/Control/HBoxContainer"]
margin_top = 180.0
margin_right = 443.0
margin_bottom = 219.0
text = "KEY_SIGNUP"

[node name="Button" type="Button" parent="Control/Control/HBoxContainer"]
visible = false
margin_top = 223.0
margin_right = 443.0
margin_bottom = 262.0
text = "Back"

[node name="Label" type="Label" parent="Control/Control/HBoxContainer"]
modulate = Color( 1, 0, 0, 1 )
margin_top = 223.0
margin_right = 443.0
margin_bottom = 262.0

[node name="Label2" type="Label" parent="Control/Control/HBoxContainer"]
margin_top = 266.0
margin_right = 443.0
margin_bottom = 305.0
text = "KEY_LOG_P_A"
align = 1
valign = 3
[connection signal="pressed" from="players/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="players/back3" to="." method="_on_back3_pressed"]
[connection signal="pressed" from="connect/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="connect/host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="connect/join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="connect/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Control/Control2/VBoxContainer/signup" to="." method="_on_signup_pressed"]
[connection signal="pressed" from="Control/Control/HBoxContainer/Button2" to="Control" method="_on_Button2_pressed"]
[connection signal="pressed" from="Control/Control/HBoxContainer/Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="Control/Control/HBoxContainer/Button3" to="Control" method="_on_Button3_pressed"]
[connection signal="pressed" from="Control/Control/HBoxContainer/Button" to="Control" method="_on_Button_pressed"]
